"Task manager v.2.1" "refactor: убрать метод updateEpicStatus из интерфейса TaskManager" "refactor: заменить ArrayList на LinkedList для поля taskHistory в классе InMemoryHistoryManager" "refactor: вынести максимальную длину истории просмотров в константу MAXLOGHISTORY в классе InMemoryHistoryManager" "feat: переопределить методы equals(Object o) и hashCode() в классе Task"